force-app/main/default/objects/RuleEngine__mdt/RuleEngine__mdt.object-meta.xml
<CustomObject>
    <label>RuleEngine</label>
    <pluralLabel>RuleEngines</pluralLabel>
</CustomObject>