force-app/main/default/objects/RuleEngine__mdt/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>