force-app/main/default/objects/RuleEngine__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>