force-app/main/default/objects/RuleEngine__mdt/fields/isGeneral__c.field-meta.xml
<CustomField>
    <fullName>isGeneral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGeneral</label>
    <type>Checkbox</type>
</CustomField>