force-app/main/default/objects/RuleEngine__mdt/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <label>Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>